# MeowMiau

./: .gitignore  CMakeLists.txt  README.md
assets/data/: map_info.toml  object_info.toml  scene.toml
assets/images/tiles/: Untitled.pdn
assets/lumeish - furniture pack/script/: script.py  spritesheet.json
cmake/toolchains/: arch64-alpine.cmake
docker/: Dockerfile
include/: map_info.h  scene_object.h  sim_world.h  world.h
include/gs/: game_state.h  map_info.h  object_info.h
include/render/: object_renderer.h  renderer.h
include/spatial/: object.h  room.h  room_layout.h
scripts/: build_pi.sh  build_win_msys.sh
src/: main.c  map_info.c  object_info.c  scene_object.c  sim_world.c
src/gs/: game_state.c  map_info.c  object_info.c
src/render/: object_renderer.c  renderer.c
src/spatial/: object.c  room.c
src/toml/: tomlc17.c
